2007-06-16	Dan Nicholson	<dnicholson@linuxfromscratch.org>
	* lfs/init.d/mountfs, lfs/init.d/mountkernfs, lfs/init.d/setclock,
	  lfs/init.d/modules, lfs/sysconfig/network-devices/if{up,down}:
	  Don't suppress stderr during bootscripts unless necessary. This
	  would prevent potentially critical messages from reaching the screen.

2007-04-24	Dan Nicholson	<dnicholson@linuxfromscratch.org>
	* lfs/init.d/functions: When killproc is executed, it checks that
	  the process is still running, sleeps if it is, then checks again.
	  The sleep is 1 second in between checks. By sleeping for 0.1 seconds
	  in between checks, killproc is much faster as it's wasting much
	  less time sleeping in the normal case that the process has died
	  after a short delay.

2007-04-16	Dan Nicholson	<dnicholson@linuxfromscratch.org>
	* lfs/init.d/functions: Redirect stderr when using kill to suppress
	  output.
	* lfs/init.d/functions: killproc() was not handling the case where a
	  pidfile is passed to the function. The logic with the signal to be
	  used was causing issues with the handling of pidfiles. This has been
	  fixes, and now killproc() will recheck the process if the signal
	  was TERM (the default) or KILL.
	* lfs/init.d/functions: statusproc() has been changed to use pidofproc()
	  instead of the deprecated getpids(). Additionally, it now accepts
	  the -p argument to specify a pidfile.
	* lfs/init.d/functions: Currently, statusproc() always returns
	  successfully, and the only way to know if the process is running
	  is to parse the output. This changes statusproc() to return the
	  status of pidofproc(), which will return unsuccessfully if the
	  requested process is not running.
	* lfs/init.d/functions: Changed reloadproc() to use pidofproc() and
	  respect the -p argument for pidfiles.
	* lfs/init.d/sysklogd: Remove a useless argument to reloadproc().

2007-03-13	Dan Nicholson	<dnicholson@linuxfromscratch.org>